--- a/.config
+++ b/.config
@@ -67,7 +67,7 @@ CONFIG_TARGET_ipq40xx=y
 # CONFIG_TARGET_ipq40xx_DEVICE_aruba_ap-365 is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_buffalo_wtr-m2133hp is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_cellc_rtl30vw is not set
-# CONFIG_TARGET_ipq40xx_DEVICE_century_wr142ac is not set
+CONFIG_TARGET_ipq40xx_DEVICE_century_wr142ac=y
 # CONFIG_TARGET_ipq40xx_DEVICE_century_wr142ac-nand is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_meraki_mr33 is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_compex_wpj419 is not set
@@ -87,7 +87,7 @@ CONFIG_TARGET_ipq40xx=y
 # CONFIG_TARGET_ipq40xx_DEVICE_leguang_ca100 is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_linksys_ea6350v3 is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_linksys_ea8300 is not set
-CONFIG_TARGET_ipq40xx_DEVICE_mobipromo_cm520-79f=y
+# CONFIG_TARGET_ipq40xx_DEVICE_mobipromo_cm520-79f=y
 # CONFIG_TARGET_ipq40xx_DEVICE_netgear_ex6100v2 is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_netgear_ex6150v2 is not set
 # CONFIG_TARGET_ipq40xx_DEVICE_netgear_ex6200v2 is not set
@@ -106,7 +106,7 @@ CONFIG_TARGET_ipq40xx_DEVICE_mobipromo_cm520-79f=y
 CONFIG_HAS_DEVICES=y
 CONFIG_TARGET_BOARD="ipq40xx"
 CONFIG_TARGET_SUBTARGET="generic"
-CONFIG_TARGET_PROFILE="DEVICE_mobipromo_cm520-79f"
+CONFIG_TARGET_PROFILE="DEVICE_century_wr142ac"
 CONFIG_TARGET_ARCH_PACKAGES="arm_cortex-a7_neon-vfpv4"
 CONFIG_DEFAULT_TARGET_OPTIMIZATION="-Os -pipe"
 CONFIG_CPU_TYPE="cortex-a7+neon-vfpv4"
@@ -132,7 +132,7 @@ CONFIG_DEFAULT_firewall=y
 CONFIG_DEFAULT_fstools=y
 CONFIG_DEFAULT_htop=y
 CONFIG_DEFAULT_ip-full=y
-CONFIG_DEFAULT_ipq-wifi-mobipromo_cm520-79f=y
+CONFIG_DEFAULT_ipq-wifi-century_wr142ac=y
 CONFIG_DEFAULT_ipset=y
 CONFIG_DEFAULT_iptables=y
 CONFIG_DEFAULT_iptables-mod-extra=y
