--- a/.config
+++ b/.config
@@ -1858,7 +1858,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_ipq-wifi-avm_fritzrepeater-1200 is not set
 # CONFIG_PACKAGE_ipq-wifi-buffalo_wtr-m2133hp is not set
 # CONFIG_PACKAGE_ipq-wifi-cellc_rtl30vw is not set
-# CONFIG_PACKAGE_ipq-wifi-century_wr142ac is not set
+CONFIG_PACKAGE_ipq-wifi-century_wr142ac=y
 # CONFIG_PACKAGE_ipq-wifi-devolo_magic-2-wifi-next is not set
 # CONFIG_PACKAGE_ipq-wifi-dlink_dap2610 is not set
 # CONFIG_PACKAGE_ipq-wifi-edgecore_ecw5410 is not set
@@ -1875,7 +1875,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_ipq-wifi-luma_wrtq-329acn is not set
 # CONFIG_PACKAGE_ipq-wifi-mikrotik_hap-ac2 is not set
 # CONFIG_PACKAGE_ipq-wifi-mikrotik_sxtsq-5-ac is not set
-CONFIG_PACKAGE_ipq-wifi-mobipromo_cm520-79f=y
+# CONFIG_PACKAGE_ipq-wifi-mobipromo_cm520-79f=y
 # CONFIG_PACKAGE_ipq-wifi-nec_wg2600hp3 is not set
 # CONFIG_PACKAGE_ipq-wifi-netgear_sxr80 is not set
 # CONFIG_PACKAGE_ipq-wifi-netgear_wac510 is not set
